# evolve-kit

./: .gitignore  pyproject.toml  readme.md  readme_zh-cn.md
.github/workflows/: ci.yml
examples/: claude_agent.py  minimal_agent.py  openai_agent.py
src/evolve_kit/: __init__.py  achievements.py  cli.py  engine.py  guard.py  insight.py  maturity.py  memory.py  scorer.py  skill_tree.py  types.py  validator.py
tests/: test_achievements.py  test_cli.py  test_dashboard.py  test_engine.py  test_guard.py  test_insight.py  test_integration.py  test_maturity.py  test_memory.py  test_scorer.py  test_skill_tree.py  test_validator.py  test_xp_level.py
