[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evolve-kit"
version = "0.1.0"
description = "Structured self-evolution for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Lobster Company", email = "dev@lobster.company"},
]
keywords = ["ai", "agent", "self-evolution", "memory", "insight", "self-improvement"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E9", "F401", "I"]
